--- a/DBT_dag.ipynb
+++ b/DBT_dag.ipynb
@@ -2,29 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #808000; text-decoration-color: #808000; font-weight: bold\">C:\\Users\\alanc\\AppData\\Local\\Temp\\ipykernel_5320\\</span><span style=\"color: #808000; text-decoration-color: #808000; font-weight: bold\">2932179204.</span><span style=\"color: #808000; text-decoration-color: #808000; font-weight: bold\">py:</span><span style=\"color: #808000; text-decoration-color: #808000; font-weight: bold\">11</span><span style=\"color: #808000; text-decoration-color: #808000; font-weight: bold\"> RemovedInAirflow3Warning</span><span style=\"color: #808000; text-decoration-color: #808000\">: Param `schedule_interval` is deprecated and will be removed in a future release. Please use `schedule` instead.</span>\n",
-       "</pre>\n"
-      ],
-      "text/plain": [
-       "\u001b[1;33mC:\\Users\\alanc\\AppData\\Local\\Temp\\ipykernel_5320\\\u001b[0m\u001b[1;33m2932179204.\u001b[0m\u001b[1;33mpy:\u001b[0m\u001b[1;33m11\u001b[0m\u001b[1;33m RemovedInAirflow3Warning\u001b[0m\u001b[33m: Param `schedule_interval` is deprecated and will be removed in a future release. Please use `schedule` instead.\u001b[0m\n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
     {
      "data": {
       "text/plain": [
        "<Task(BashOperator): dbt_test>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -44,7 +31,7 @@
     "    'dbt_pipeline',\n",
     "    default_args=default_args,\n",
     "    description=\"Execução do dbt run e dbt teste\",\n",
-    "     schedule_interval='@hour',\n",
+    "     schedule='@hour',\n",
     "     catchup=False) as dag:\n",
     "\n",
     "        dbt_run = BashOperator(task_id=\"dbt_run\",\n",
