--- a/Transform.ipynb
+++ b/Transform.ipynb
@@ -9,49 +9,49 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "         id original_language           original_title  popularity  \\\n",
-      "0    939243                en     Sonic the Hedgehog 3    3435.809   \n",
-      "1    539972                en        Kraven the Hunter    2056.111   \n",
-      "2   1241982                en                  Moana 2    1831.321   \n",
-      "3    993710                en           Back in Action    1534.220   \n",
-      "4   1249289                en                   Alarum    1392.625   \n",
-      "5   1410082                en   Sniper: The Last Stand    1281.965   \n",
-      "6        85                en  Raiders of the Lost Ark    1268.732   \n",
-      "7   1097549                en                 Babygirl    1179.554   \n",
-      "8    179387                tl           Heavenly Touch    1118.624   \n",
-      "9    426063                en                Nosferatu    1020.625   \n",
-      "10   558449                en             Gladiator II     958.507   \n",
-      "11  1114894                en    Star Trek: Section 31     944.670   \n",
-      "12   762509                en    Mufasa: The Lion King     914.045   \n",
-      "13   912649                en    Venom: The Last Dance     913.007   \n",
-      "14   811941                te             దేవర: Part 1     910.775   \n",
-      "15   970450                en               Werewolves     802.998   \n",
-      "16   933260                en            The Substance     795.158   \n",
-      "17   426889                fr              Le clitoris     771.231   \n",
-      "18  1255788                fr             Le Jardinier     722.371   \n",
-      "19  1035048                en                Elevation     643.392   \n",
+      "         id original_language                original_title  popularity  \\\n",
+      "0    939243                en          Sonic the Hedgehog 3    5620.604   \n",
+      "1    539972                en             Kraven the Hunter    3123.858   \n",
+      "2   1241982                en                       Moana 2    2592.759   \n",
+      "3    993710                en                Back in Action    2134.078   \n",
+      "4   1249289                en                        Alarum    1766.016   \n",
+      "5   1160956                zh                          熊猫计划    1683.170   \n",
+      "6   1410082                en        Sniper: The Last Stand    1612.644   \n",
+      "7    710295                en                      Wolf Man    1521.794   \n",
+      "8    762509                en         Mufasa: The Lion King    1499.197   \n",
+      "9    912649                en         Venom: The Last Dance    1311.467   \n",
+      "10   558449                en                  Gladiator II    1229.783   \n",
+      "11   426063                en                     Nosferatu    1189.734   \n",
+      "12   811941                te                  దేవర: Part 1    1067.539   \n",
+      "13  1097549                en                      Babygirl    1021.698   \n",
+      "14   933260                en                 The Substance    1019.191   \n",
+      "15  1114894                en         Star Trek: Section 31    1004.175   \n",
+      "16   970450                en                    Werewolves     977.004   \n",
+      "17  1035048                en                     Elevation     880.175   \n",
+      "18  1255788                fr                  Le Jardinier     879.755   \n",
+      "19  1300607                es  Los dos hemisferios de Lucca     813.136   \n",
       "\n",
-      "   release_date                    title  vote_average  vote_count  \n",
-      "0    2024-12-19     Sonic the Hedgehog 3         7.800        1514  \n",
-      "1    2024-12-11        Kraven the Hunter         6.612        1038  \n",
-      "2    2024-11-21                  Moana 2         7.200        1280  \n",
-      "3    2025-01-15           Back in Action         6.632         778  \n",
-      "4    2025-01-16                   Alarum         6.000         119  \n",
-      "5    2025-01-21   Sniper: The Last Stand         6.500          61  \n",
-      "6    1981-06-12  Raiders of the Lost Ark         7.926       12594  \n",
-      "7    2024-12-25                 Babygirl         5.793         340  \n",
-      "8    2009-05-12           Heavenly Touch         6.000          28  \n",
-      "9    2024-12-25                Nosferatu         6.700        1871  \n",
-      "10   2024-11-05             Gladiator II         6.757        2664  \n",
-      "11   2025-01-15    Star Trek: Section 31         4.592         119  \n",
-      "12   2024-12-18    Mufasa: The Lion King         7.431         950  \n",
-      "13   2024-10-22    Venom: The Last Dance         6.800        2668  \n",
-      "14   2024-09-26           Devara: Part 1         7.022          90  \n",
-      "15   2024-12-04               Werewolves         6.191         267  \n",
-      "16   2024-09-07            The Substance         7.100        3646  \n",
-      "17   2016-06-18              Le clitoris         6.614          22  \n",
-      "18   2025-01-30             The Gardener         6.198          43  \n",
-      "19   2024-11-07                Elevation         6.300         456  \n"
+      "   release_date                   title  vote_average  vote_count  \n",
+      "0    2024-12-19    Sonic the Hedgehog 3         7.800        1644  \n",
+      "1    2024-12-11       Kraven the Hunter         6.600        1132  \n",
+      "2    2024-11-21                 Moana 2         7.200        1376  \n",
+      "3    2025-01-15          Back in Action         6.628         857  \n",
+      "4    2025-01-16                  Alarum         5.836         140  \n",
+      "5    2024-10-01              Panda Plan         6.200          37  \n",
+      "6    2025-01-21  Sniper: The Last Stand         6.600          71  \n",
+      "7    2025-01-15                Wolf Man         6.400         267  \n",
+      "8    2024-12-18   Mufasa: The Lion King         7.400         981  \n",
+      "9    2024-10-22   Venom: The Last Dance         6.779        2742  \n",
+      "10   2024-11-05            Gladiator II         6.800        2743  \n",
+      "11   2024-12-25               Nosferatu         6.700        1982  \n",
+      "12   2024-09-26          Devara: Part 1         7.204         120  \n",
+      "13   2024-12-25                Babygirl         5.757         414  \n",
+      "14   2024-09-07           The Substance         7.139        3744  \n",
+      "15   2025-01-15   Star Trek: Section 31         4.600         137  \n",
+      "16   2024-12-04              Werewolves         6.213         279  \n",
+      "17   2024-11-07               Elevation         6.400         489  \n",
+      "18   2025-01-30            The Gardener         6.415          59  \n",
+      "19   2025-01-30           Lucca's World         7.750          60  \n"
      ]
     }
    ],
